test/tests/stages/8_loops/valid/extra_credit/switch_assign_in_condition.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[3]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: a
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 0
                      None: 
                    None: 
                  Int: 
                  None: 
            CS: 
              CSwitch: 
                TIdentifier: (null)
                Bool: 0
                CAssignment: 
                  None: 
                  CVar: 
                    TIdentifier: a
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 1
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[4]: 
                      CS: 
                        CCase: 
                          TIdentifier: (null)
                          CConstant: 
                            CConstInt: 
                              TInt: 0
                            None: 
                          CReturn: 
                            CConstant: 
                              CConstInt: 
                                TInt: 10
                              None: 
                      CS: 
                        CCase: 
                          TIdentifier: (null)
                          CConstant: 
                            CConstInt: 
                              TInt: 1
                            None: 
                          CExpression: 
                            CAssignment: 
                              None: 
                              CVar: 
                                TIdentifier: a
                                None: 
                              CBinary: 
                                CMultiply: 
                                CVar: 
                                  TIdentifier: a
                                  None: 
                                CConstant: 
                                  CConstInt: 
                                    TInt: 2
                                  None: 
                                None: 
                              None: 
                      CS: 
                        CBreak: 
                          TIdentifier: (null)
                      CS: 
                        CDefault: 
                          TIdentifier: (null)
                          CExpression: 
                            CAssignment: 
                              None: 
                              CVar: 
                                TIdentifier: a
                                None: 
                              CConstant: 
                                CConstInt: 
                                  TInt: 99
                                None: 
                              None: 
                List[0]: 
            CS: 
              CReturn: 
                CVar: 
                  TIdentifier: a
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
